# Mensagens-Saboritas

./: .gitignore  GUIA_DE_INSTALACAO_E_USO.md  README.md  mensagens_saboritas.example.json  pyproject.toml  requirements.txt
USO/: GUIA_DE_INSTALACAO_E_USO.md  README.md
USO/scripts/: Atualizar_Codigo.bat  Instalar_Mensagens.bat  Mensagens.bat
data/legacy/old_leads/: csv_agregator.py  csv_code.py
scripts/: Atualizar_Codigo.bat  GUI.py  Instalar_Mensagens.bat  Install_Mensagens.bat  Mensagens.bat  launcher.py  messaging.py
src/mensagens_saboritas/: __init__.py  config.py  main.py  runtime.py
src/mensagens_saboritas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/mensagens_saboritas/automation/: __init__.py  whatsapp.py
src/mensagens_saboritas/data/: __init__.py  csv_tools.py
src/mensagens_saboritas/ui/: app.py
